New implementation for get_filename_component(PATH)

We were not doing the exact same thing as cmake, in case it was a false
relative directory. It lead to problems with weird uses of get_filename_components

BUG: 319379